Blender crash Steering actuator 2.66 -> 2.59 -> 2.66 #34383

Closed
opened 2013-02-23 16:07:15 +01:00 by Thomas Szepe · 7 comments
Member

Category: Conversion

%%%Store a file with a steering actuator with an older Blender version (e.g. 2.59) which don't have the steering actuator.
If you now try to open it with a newer version that has the steering actuator blender will crash.%%%

**Category**: Conversion %%%Store a file with a steering actuator with an older Blender version (e.g. 2.59) which don't have the steering actuator. If you now try to open it with a newer version that has the steering actuator blender will crash.%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

%%% I found a solution. I uploadet a fix.

%%%

%%% I found a solution. I uploadet a fix. %%%
Author
Member

%%%I have forgotten to delete the comment //HG1 in the patch. Please delete it if my patch is used.%%%

%%%I have forgotten to delete the comment //HG1 in the patch. Please delete it if my patch is used.%%%

%%%That patch looks alright, but I don't know much about what do_versions changes the steering actuator had to go through. Maybe Benoit can shed some light on this? (Benoit, feel free to unassign yourself after commenting)%%%

%%%That patch looks alright, but I don't know much about what do_versions changes the steering actuator had to go through. Maybe Benoit can shed some light on this? (Benoit, feel free to unassign yourself after commenting)%%%
Member

%%%The patch is ok. It might look strange that the do_version change for the steering actuator is not within a 'if' check on versionfile like most of the other do_version changes but it's ok as the change for the steering actuator consist simply in initializing values when the actuator is not initialized.

The patch can be applied.%%%

%%%The patch is ok. It might look strange that the do_version change for the steering actuator is not within a 'if' check on versionfile like most of the other do_version changes but it's ok as the change for the steering actuator consist simply in initializing values when the actuator is not initialized. The patch can be applied.%%%

%%%The patch has been committed as r56353. Thanks for the fix!%%%

%%%The patch has been committed as r56353. Thanks for the fix!%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34383
No description provided.