BGE: Fix for [#34383] Blender crash Steering actuator 2.66 -> 2.59 -> 2.66. Reported and fixed by HG1.